--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -18,5 +18,12 @@
   .siteName {
     display: inline-block;
     font-family: Pacifico;
+
+
+    .tld {
+      font-family: Roboto,sans-serif;
+      font-size: 1rem;
+      color: #333333;
+    }
   }
 }
